First changes in new branch

--- a/MySimpleServlet/.project
+++ b/MySimpleServlet/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MySimpleServlet</name>
+	<name>MA_WebApp</name>
 	<comment></comment>
 	<projects>
 	</projects>
