parse json request test

--- a/MA_Webapp/webapp/WEB-INF/web.xml
+++ b/MA_Webapp/webapp/WEB-INF/web.xml
@@ -13,10 +13,20 @@
 			<param-value>Techburg</param-value>
 	</init-param>
   </servlet>
+  
+  <servlet>
+    <servlet-name>nashEquilibriumServlet</servlet-name>
+    <servlet-class>edu.rits.ma.webapp.servlet.NashEquilibriumSolverServlet</servlet-class>
+  </servlet>
 
   <servlet-mapping>
     <servlet-name>defaultServlet</servlet-name>
     <url-pattern>/app.do</url-pattern>
   </servlet-mapping>
 
+  <servlet-mapping>
+    <servlet-name>nashEquilibriumServlet</servlet-name>
+    <url-pattern>/solve.do</url-pattern>
+  </servlet-mapping>
+  
 </web-app>   
